Fixed outline of metric and lock icons (#815)
* Fixed outline of metric and lock icons

* Made it consistent for notebook listings too

* removed extra space

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -51,7 +51,8 @@ strong, b {
     font-weight: $bold-weight;
 }
 a:focus,
-.btn:focus {
+.btn:focus,
+.tagLogoLock:focus {
     outline: 1px dotted $primary-link-color;
 }
 time:focus {
@@ -1235,7 +1236,7 @@ span.deprecated-tag {
 .nb-stats {
     .badge-notify {
         left: 0;
-        top: 1px;
+        top: -10px;
     }
     .badge {
         background-color: inherit;
@@ -1387,6 +1388,9 @@ span.deprecated-tag {
 .action-icon {
     color: $darker-icon-color;
     margin: 0 .4em;
+}
+.nb-stats .action-icon {
+    margin: 0;
 }
 #notebookJumbo .notebook-actions {
     display: block;
@@ -1578,9 +1582,6 @@ table .glyphicon-alert {
     clear: both;
     display: block;
     height: 20px;
-    & > a {
-        color: inherit;
-    }
     img {
         margin-right: 6px;
         max-height: 24px;
@@ -1609,6 +1610,21 @@ table .glyphicon-alert {
     .comments-metric {
         display: none;
     }
+}
+.nb-stats a {
+    margin-left: .4em;
+}
+#tagsDisplay,
+.tag-edit-mode,
+.nb-stats {
+   & > a {
+       color: inherit;
+       padding: .75em 0 0 .3em;
+       margin-right: -.3em;
+   }
+   & > a.health-metric {
+       padding-right: .3em;
+   }
 }
 #tagsEditForm {
     div.input-group {
